--- a/app/views/missions/edit.html.slim
+++ b/app/views/missions/edit.html.slim
@@ -1,8 +1,7 @@
-h1 Editing mission
+h4 = t("missions.edit")
+hr
 
 == render 'form'
 
-= link_to 'Show', @mission
-'|
-= link_to 'Back', missions_path
+= link_to t("common.back"), missions_path
 
