--- a/app/assets/stylesheets/missions.css.scss
+++ b/app/assets/stylesheets/missions.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the missions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.mission-show {
+  hr {
+    margin: 5px 0 20px 0;
+  }
+  span.edit {
+    margin-left: 15px;
+  }
+}
+
+.thumbnails {
+  li.box {
+    margin-left: 0;
+    margin-right: 20px;
+  }
+}
