--- a/app/views/missions/new.html.slim
+++ b/app/views/missions/new.html.slim
@@ -1,5 +1,6 @@
-h1 New mission
+h4 = t("missions.new")
+hr
 
 == render 'form'
 
-= link_to 'Back', missions_path
+= link_to t('common.back'), missions_path
