code improve based on zlx's advise I think I sould pay this guy for the review

--- a/app/views/missions/index.html.slim
+++ b/app/views/missions/index.html.slim
@@ -10,7 +10,7 @@ hr
           .thumbnail
             .caption
               h5 = link_to mission.name, mission
-              p = mission.description.shorter(25).html_safe
+              p = mission.description.truncate(25).html_safe
 
       br
 
