add team manage

--- a/app/views/shared/_menu.slim
+++ b/app/views/shared/_menu.slim
@@ -11,3 +11,4 @@
       .container-fluid.nav-collapse
         ul.nav
           li= link_to "任务系统", missions_path
+          li= link_to "团队列表", teams_path
