add translate for team

--- a/app/views/teams/index.slim
+++ b/app/views/teams/index.slim
@@ -14,4 +14,4 @@ hr
       br
 
 - if can? :manage, Team
-  = link_to t('teams.new'), new_team_path, class: 'btn btn-primary'
+  = link_to t('common.new'), new_team_path, class: 'btn btn-primary'
