--- a/app/views/missions/index.html.slim
+++ b/app/views/missions/index.html.slim
@@ -14,4 +14,5 @@ hr
 
       br
 
-= link_to t('missions.create'), new_mission_path
+- if current_user
+  = link_to t('missions.create'), new_mission_path
