--- a/app/views/missions/show.html.slim
+++ b/app/views/missions/show.html.slim
@@ -1,16 +1,21 @@
 .row-fluid.mission-show
-  .span8.well
-    h4
-      = @mission.name
-    div.muted
-      span = link_to @mission.creator.nickname, '#'
-      span = " • " + t('common.published_at')
-      span = @mission.created_at.to_s(:db)
+  .span8
+    .mission.well
+      h4
+        = @mission.name
+      div.muted
+        span = link_to @mission.creator.nickname, '#'
+        span = " • " + t('common.published_at')
+        span = @mission.created_at.to_s(:db)
 
-      - if current_user == @mission.creator
-        span.edit = link_to t("common.edit"), edit_mission_path(@mission)
-    hr
-    p = simple_format @mission.description.html_safe
+        - if current_user == @mission.creator
+          span.edit = link_to t("common.edit"), edit_mission_path(@mission)
+      hr
+      p = simple_format @mission.description.html_safe
+    .comments.well
+      = render partial: "comments", locals: {comments: @mission.comments}
+    .new-comment.well
+      = render "new_comment"
 
   .span4.well
 
