--- a/app/views/comments/_comment.slim
+++ b/app/views/comments/_comment.slim
@@ -8,4 +8,4 @@
       span.time_ago
         = "#{time_ago_in_words comment.created_at}前"
     .content
-      = comment.content
+      = markdown comment.content.html_safe
