--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,9 +1,11 @@
 <% if @comment.errors.any? %>
   $(".new-comment textarea").focus();
 <% else %>
-  $(".comments").append("<%= j (render @comment, :index => @mission.comments.count-1) %>");
-  $(".new-comment #preview").addClass("hidden").html('');
-  $(".new-comment textarea").css("display", "block").val('');
-  $(".editor-toolbar .preview").removeClass("active");
-  $(".editor-toolbar .edit").addClass("active");
+  if ($(".new-comment textarea").val() != "") {
+    $(".comments").append("<%= j (render @comment, :index => @mission.comments.count-1) %>");
+    $(".new-comment #preview").addClass("hidden").html('');
+    $(".new-comment textarea").css("display", "block").val('');
+    $(".editor-toolbar .preview").removeClass("active");
+    $(".editor-toolbar .edit").addClass("active");
+  }
 <% end %>
