--- a/app/views/shared/_menu.slim
+++ b/app/views/shared/_menu.slim
@@ -10,5 +10,6 @@
       = link_to t('site_name', default: 'site'), root_path, class: 'brand'
       .container-fluid.nav-collapse
         ul.nav
+          li= link_to "工会主系统", 'http://rubyunion.com'
           li= link_to "任务系统", missions_path
           li= link_to "团队列表", teams_path
